--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body{
     margin:0;
+    overflow-x: hidden;
     font-family: Arial, Helvetica, sans-serif;
     background-color: paleturquoise;
 }
