--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ b{
     font-size:1.5em; 
     color:rgb(255, 215, 0);
     margin-left: 4em;
+    text-align: center;
     text-shadow: 0px 3px 3px black;
     
 }
